worked on the demo for ag-grid

--- a/AngularCrud/src/app/app.component.html
+++ b/AngularCrud/src/app/app.component.html
@@ -15,6 +15,12 @@
       <li>
         <a routerLink="register">Register</a>
       </li>
+      <li>
+        <a routerLink="registeredUserListMatTable">User List(Mat)</a>
+      </li>
+      <li>
+          <a routerLink="registeredUserListAgGridTable">User List(Ag)</a>
+        </li>
       <!-- <li>
         <a [routerLink]="['/employee', 2]">Employee Detail for EmpId 2</a>
       </li> -->
