--- a/AngularCrud/src/styles.css
+++ b/AngularCrud/src/styles.css
@@ -4,3 +4,11 @@
 @import '../node_modules/ngx-bootstrap/datepicker/bs-datepicker.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
+@import "~ag-grid-community/dist/styles/ag-grid.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham-dark.css";
+@import "~ag-grid-community/dist/styles/ag-theme-blue.css";
+@import "~ag-grid-community/dist/styles/ag-theme-bootstrap.css";
+@import "~ag-grid-community/dist/styles/ag-theme-dark.css";
+@import "~ag-grid-community/dist/styles/ag-theme-fresh.css";
+@import "~ag-grid-community/dist/styles/ag-theme-material.css";
