implemented pagination and pathVariableList

--- a/AngularCrud/src/app/employee/component/register-user-list-ag-grid/register-user-list-ag-grid.component.css
+++ b/AngularCrud/src/app/employee/component/register-user-list-ag-grid/register-user-list-ag-grid.component.css
@@ -3,3 +3,14 @@
   margin-right: 8px;
   margin-top: 8px;
 }
+
+.loading-spinner {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.example-margin {
+  margin: 0 10px;
+}
