--- a/AngularCrud/src/app/employee/component/registered-user-list-mat-table/registered-user-list.component.html
+++ b/AngularCrud/src/app/employee/component/registered-user-list-mat-table/registered-user-list.component.html
@@ -4,7 +4,7 @@
 <div class="spinner-container" *ngIf="!dataSource">
   <mat-spinner></mat-spinner>
 </div>
-<div *ngIf="dataSource" class="mat-elevation-z8" >
+<div  class="mat-elevation-z8" >
   <mat-table [dataSource]="dataSource" matSort>
 
     <!-- Checkbox Column -->
@@ -54,9 +54,18 @@
       <mat-cell *matCellDef="let userInfo">{{userInfo.state}}</mat-cell>
     </ng-container> -->
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let rowData; columns: displayedColumns" (click)="onRowClicked(rowData)" class="pointerCursor"></mat-row>
+    <mat-row *matRowDef="let rowData; columns: displayedColumns;" (click)="onRowClicked(rowData)" class="pointerCursor"></mat-row>
   </mat-table>
   <div>
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
+<div class="button-row">
+    <!-- <button mat-stroked-button>Basic</button> -->
+    <button mat-stroked-button color="primary" (click)="editData()">Edit</button>
+    <!-- <button mat-stroked-button color="accent">Accent</button>
+    <button mat-stroked-button color="warn">Warn</button>
+    <button mat-stroked-button disabled>Disabled</button>
+    <a mat-stroked-button routerLink=".">Link</a> -->
+    <button mat-stroked-button color="warn" (click)="onDelete()">Delete</button> 
+  </div>
