custom theme , nav & menu, button icon

--- a/AngularCrud/src/app/app.component.html
+++ b/AngularCrud/src/app/app.component.html
@@ -1,5 +1,10 @@
 <!-- this is html of app component -->
 <!-- <button class="btn btn-primary">Submit</button> -->
+
+<!-- this material nave template -->
+<app-crud-main-nav></app-crud-main-nav>
+
+
 <div class="container">
   <nav class="navbar navbar-default">
     <ul class="nav navbar-nav">
