--- a/AngularCrud/src/app/employee/component/registered-user-list-mat-table/registered-user-list.component.html
+++ b/AngularCrud/src/app/employee/component/registered-user-list-mat-table/registered-user-list.component.html
@@ -4,7 +4,7 @@
 <div class="spinner-container" *ngIf="!dataSource">
   <mat-spinner></mat-spinner>
 </div>
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z24 mat-elevation-transition">
   <mat-table [dataSource]="dataSource" matSort>
 
     <!-- Checkbox Column -->
@@ -60,16 +60,16 @@
     <mat-paginator [pageIndex]="0" [pageSize]="5" [pageSizeOptions]="[2, 5, 10, 20]" showFirstLastButtons></mat-paginator>
   </div>
 </div>
-<div class="button-row">
+<div class="button-row ">
   <!-- <button mat-stroked-button>Basic</button> -->
-  <button mat-fab color="accent" (click)="editData()">
+  <button mat-fab color="accent" (click)="editData()" class="mat-elevation-z24">
     <mat-icon>mode_edit</mat-icon>
   </button>
   <!-- <button mat-stroked-button color="accent">Accent</button>
     <button mat-stroked-button color="warn">Warn</button>
     <button mat-stroked-button disabled>Disabled</button>
     <a mat-stroked-button routerLink=".">Link</a> -->
-  <button mat-fab color="warn" (click)="onDelete()">
-    <mat-icon>delete</mat-icon>
+  <button mat-fab color="warn" (click)="onDelete()" class="mat-elevation-z24">
+    <mat-icon >delete</mat-icon>
   </button>
 </div>
