--- a/Angular7- 8/src/app/header/header.component.html
+++ b/Angular7- 8/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a  (click)="onSelect('recipe')"> Recipes </a></li>
-        <li><a  on-click="onSelect('shopping-list')"> Shoppping List </a></li>
+        <li><a href="#" (click)="onSelect('recipe')"> Recipes </a></li>
+        <li><a href="#" on-click="onSelect('shopping-list')"> Shoppping List </a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right ">
         <li class="dropdown" appDropdown>
