--- a/Angular7- 8/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Angular7- 8/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
   <div class="col-xs-12">
     <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="img-responsive" style="max-height:30px;">
@@ -11,7 +12,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="btn-group" appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle ">Manage Recipe
+      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"  >Manage Recipe
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
@@ -31,4 +32,5 @@
   <div class="col-xs-12">
     Ingredients
   </div>
+</div>
 </div>
