--- a/Angular7- 8/src/app/header/header.component.html
+++ b/Angular7- 8/src/app/header/header.component.html
@@ -1,23 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a  class="navbar-brand">Recipe Book </a>
-    </div>
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand">Recipe Book </a>
+      </div>
 
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')"> Recipes </a></li>
-        <li><a href="#" on-click="onSelect('shopping-list')"> Shoppping List </a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right ">
-        <li class="dropdown" appDropdown>
-        <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-             <li><a href="#">Save Data</a></li> 
-             <li><a href="#">Fetch Data</a></li> 
-          </ul>
-        </li>
-      </ul>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#" (click)="onSelect('recipe')"> Recipes </a></li>
+          <li><a href="#" on-click="onSelect('shopping-list')"> Shoppping List </a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right ">
+          <li class="dropdown" appDropdown>
+            <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown">Manage <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Save Data</a></li>
+              <li><a href="#">Fetch Data</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</div>
