--- a/Angular7- 8/src/app/header/header.component.html
+++ b/Angular7- 8/src/app/header/header.component.html
@@ -15,6 +15,7 @@
             <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown">Manage <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Save Data</a></li>
+              <div class="dropdown-divider"></div>
               <li><a href="#">Fetch Data</a></li>
             </ul>
           </li>
