--- a/Angular7- 8/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Angular7- 8/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,9 @@
         </button>
         <ul class="dropdown-menu">
           <li><a href="#">To Shopping list</a></li>
+          <div class="dropdown-divider"></div>
           <li><a href="#">Edit Recipe</a></li>
+          <div class="dropdown-divider"></div>
           <li><a href="#">Delete Recipe</a></li>
         </ul>
       </div>
